# genai-dbs

./: .gitignore  README.md  pyproject.toml
genai_dbs/: pinecone-quickstart.py
