[tool.poetry]
name = "genai_dbs"
version = "0.1.0"
description = ""
authors = ["Jason Koo <jalakoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.15.0"
openai = "^1.3.5"
tiktoken = "^0.5.1"
pinecone-client = "^2.2.4"
langchain = "^0.0.341"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
